# via-lang

./: .clang-format  .clang-format-old  .clangd  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  GRAMMAR.md  LICENSE  Makefile  README.md  SECURITY.md  STRUCTURE.drawio  TODO.md  ast.drawio  bytecode.txt  compile_flags.txt  err.txt  test  test.asm  test.via  vcpkg-configuration.json  vcpkg.json  vm.cpp
CLI/: cmdparser.h  common.h  handlers.cpp  handlers.h  main.cpp  repl.cpp  repl.h
Luac/: README.md
cli/: CMakeLists.txt  app.hpp  main.cpp  options.cpp  options.hpp  parser.hpp  tooling.hpp
cli/tools/: repair.cpp  repair.hpp  utility.cpp  utility.hpp
core/: CMakeLists.txt  debug.cpp  debug.hpp  diagnostics.cpp  diagnostics.hpp  error.hpp  init.cpp  init.hpp  logger.cpp  logger.hpp  source.cpp  source.hpp
core/ast/: ast.cpp  ast.hpp
core/ir/: builder.cpp  builder.hpp  ir.cpp  ir.hpp
core/lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
core/module/: defs.cpp  defs.hpp  manager.hpp  module.cpp  module.hpp  symbol.cpp  symbol.hpp
core/parser/: parser.cpp  parser.hpp
core/sema/: const.cpp  const.hpp  local_bc.hpp  local_ir.hpp  register.hpp  stack.hpp  types.cpp  types.hpp
core/support/: ansi.cpp  ansi.hpp  bit.hpp  defer.hpp  math.hpp  memory.hpp  traits.hpp  utility.hpp
core/support/os/: dl.cpp  dl.hpp
core/vm/: closure.hpp  debugger.cpp  debugger.hpp  executable.cpp  executable.hpp  execute.cpp  instruction.cpp  instruction.hpp  machine.cpp  machine.hpp  value.cpp  value.hpp
docs/: examples.md  index.md  introduction.md
fuzz/: compiler_test.cpp  lexer_test.cpp  parser_test.cpp
include/: arena.hpp  argparse.hpp  doctest.hpp  expected.hpp  flags.hpp  linenoise.hpp  llvm.hpp  magic_enum.hpp  via.h
installer/: Cargo.toml
lib/: CMakeLists.txt
scripts/: assembler.py  build.py  count_lines.py  format.py  fuzzer.py  install.py  profile.py  run_tests.py  test.py  utils.py
src/: api-execute.cpp  api-impl.cpp  api-impl.h  api.h  api_config.h  ast.cpp  ast.h  bbuilder.cpp  bbuilder.h  bitutils.cpp  bitutils.h  buffer.h  bufview.h  build.cpp  bytecode-builder.cpp  bytecode-builder.h  cabi.h  cache.cpp  cache.h  callable_once.cpp  callable_once.h  callstack.cpp  callstack.h  cleaner.cpp  cleaner.h  color.h  common-defs.h  common-includes.h  common-macros.h  common.cpp  common.h  common.hpp  common_nodep.h  conf.h  container.h  context.cpp  context.h  core.h  csize.h  diag.cpp  (+124 more)
src/via-cli/: CMakeLists.txt  app.h  app.hpp  context.h  init.h  main.cpp  panic.h  process_file.h  read_file.h
src/via-core/: CMakeLists.txt  ansi.cpp  ansi.h  buffer.cpp  buffer.h  color.h  conditional.h  config.h  constexpr_ipow.h  constexpr_stof.h  constexpr_stoi.h  convert.h  debug.cpp  debug.h  debug.hpp  diag.cpp  diag.h  diagnostics.cpp  diagnostics.h  diagnostics.hpp  error.h  expected.h  init.cpp  init.h  intern_table.h  iota.h  memory.cpp  memory.h  module.cpp  module.h  option.h  panic.cpp  panic.h  pseudo_value.cpp  pseudo_value.h  semver.h  singleton.h  source.cpp  source.hpp  utility.h
src/via-core/ast/: ast.cpp  ast.h  ast.hpp  optimizer.h  pass.h  pass_const_fold.cpp  pass_const_fold.h  visitor.h
src/via-core/bytecode/: builder.cpp  builder.h
src/via-core/codegen/: control_path.cpp  control_path.h  expr_visitor.cpp  expr_visitor.h  generator.cpp  generator.h  register.h  stmt_visitor.cpp  stmt_visitor.h
src/via-core/common/: diag.cpp  diag.h
src/via-core/compiler/: visitor.h
src/via-core/interpreter/: instruction.cpp  instruction.h
src/via-core/ir/: builder.cpp  builder.h  builder.hpp  expr_visitor.cpp  expr_visitor.h  ir.cpp  ir.h  ir.hpp  stmt_visitor.h  visitor.h
src/via-core/lexer/: lexer.cpp  lexer.h  lexer.hpp  location.cpp  location.h  location.hpp  token.cpp  token.h  token.hpp
src/via-core/module/: defs.cpp  defs.h  defs.hpp  manager.cpp  manager.h  manager.hpp  module.cpp  module.h  module.hpp  symbol.h  symbol.hpp
src/via-core/parser/: ast.cpp  ast.h  optimize.h  optimize_fold.cpp  optimize_fold.h  parser.cpp  parser.h  parser.hpp
src/via-core/sema/: bytecode_local.h  bytecode_local.hpp  const.cpp  const.hpp  const_value.cpp  const_value.h  constexpr.cpp  constexpr.h  context.cpp  context.h  context.hpp  control.cpp  control.hpp  control_path.cpp  control_path.h  control_path.hpp  ir_local.h  ir_local.hpp  local.h  register.cpp  register.h  register.hpp  stack.cpp  stack.h  stack.hpp  type.cpp  type.h  type.hpp  type_base.h  type_context.cpp  type_context.h  type_context.hpp  type_operations.h  type_primitives.h  type_truthiness.h  type_utils.h  type_visitor.h  types.cpp  types.hpp  variable.h
src/via-core/support/: ansi.cpp  ansi.h  ansi.hpp  bit_enum.h  conv.hpp  conversions.h  enum.hpp  expected.h  intern.hpp  math.h  math.hpp  memory.cpp  memory.h  memory.hpp  option.h  traits.hpp  type_traits.h  utility.h  utility.hpp
src/via-core/support/os/: dl.cpp  dl.hpp
src/via-core/vm/: closure.h  debugger.cpp  debugger.hpp  executable.cpp  executable.h  executable.hpp  execute.cpp  executor.cpp  header.cpp  header.h  instruction.cpp  instruction.h  instruction.hpp  interpreter.cpp  interpreter.h  machine.cpp  machine.h  machine.hpp  ref.hpp  stack.cpp  stack.h  stack.hpp  value.cpp  value.h  value.hpp  value_ref.cpp  value_ref.h
src/via-lib/: CMakeLists.txt
src/via-lib/std/: io.cpp  math.cpp
src/via-shared/: CMakeLists.txt  buffer.h  color.h  common.h  config.h  memory.cpp  memory.h
src/via-shared/util/: buffer.h  color.h  constexpr_stof.h  constexpr_stoi.h  iota.h  memory.cpp  memory.h  visit_as.h
test/: __io.via  asm.viac  calculator.via  example.via  game.via  globals.via.out  intrinsics.via  intrinsics.via.out  introduction.via  local_io_test.via  milestone.via  readme_example.via  rule110.via  test.via  test1.via  test2.via  test3.via  test_small.via  variables.via  variables.via.out  variables_1.via
tests/: bytecode.txt  features_test.via  lua_interop.via  macro_test.via  test.via  test_small.via
viapm/: README.md
(+1339 files in other folders)
